Adding some files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- CSS FILES -->
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/menu.css">
-    
+
     <!-- VENDOR CSS FILES -->
 
     <!-- FAVICONS -->
@@ -33,7 +33,9 @@
             <img src="resources/images/logo/cn_logo_white.png" alt="cn_logo_white.png" class="logo">
             <div class="menu-wrap">
                 <input type="checkbox" class="toggle">
-                <div class="hamburger"><div></div></div>
+                <div class="hamburger">
+                    <div></div>
+                </div>
                 <div class="menu">
                     <div>
                         <div>
@@ -50,11 +52,13 @@
         </div>
     </header>
     <div class="showcase">
-            <div class="container showcase-inner">
-                <h1>Welcome</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non pretium dui. Cras efficitur, urna eget suscipit efficitur, eros neque semper ante, nec congue felis risus quis neque.</p>
-                <a href="#" class="btn">&darr;</a>
-            </div>
+        <div class="container showcase-inner">
+            <h1>Welcome</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non pretium dui. Cras efficitur, urna eget suscipit efficitur, eros neque semper ante, nec congue felis risus quis neque.</p>
+            <a href="#" class="btn">&darr;</a>
         </div>
+    </div>
 
-</body></html>
+</body>
+
+</html>
