adding footer to project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        
+
     </header>
     <div class="showcase">
         <div class="container showcase-inner">
@@ -159,20 +159,50 @@
     <!---------------------- PROJECTS SECTION ----------------------->
     <section class="section-projects" id="projects">
         <h2>Projects</h2>
-        <div class="grid grid-pad">
-            <div class="col-3-12">
-                <div class="box"></div>
-            </div>
-            <div class="col-3-12">
-                <div class="box"></div>
-            </div>
-            <div class="col-3-12">
-                <div class="box"></div>
-            </div>
-            <div class="col-3-12">
-                <div class="box"></div>
-            </div>
-        </div>
+        <ul class="projects-showcase clearfix">
+            <li>
+                <figure class="project-photo">
+                    <div class="red"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="blue"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="green"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="yellow"></div>
+                </figure>
+            </li>
+        </ul>
+        <ul class="projects-showcase clearfix">
+            <li>
+                <figure class="project-photo">
+                    <div class="green"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="red"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="yellow"></div>
+                </figure>
+            </li>
+            <li>
+                <figure class="project-photo">
+                    <div class="blue"></div>
+                </figure>
+            </li>
+        </ul>
     </section>
 
     <!---------------------- CONTACT SECTION ------------------------>
@@ -183,7 +213,26 @@
     <!--------------------------- FOOTER ---------------------------->
     <footer>
         <div class="row">
-
+            <ul class="footer-nav">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <ul class="footer-nav-social-links">
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fas fa-envelope-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="copyright">
+            <div class="row">
+                <p>Copyright &copy; Christoffer Nielsen 2020</p>
+            </div>
         </div>
     </footer>
 
@@ -195,4 +244,6 @@
 <script src="https://kit.fontawesome.com/5c07e5c24f.js" crossorigin="anonymous"></script>
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
-<script src="/resources/js/js_sticky_header.js"></script></html>
+<script src="/resources/js/js_sticky_header.js"></script>
+
+</html>
