Adding content to contact section

--- a/index.html
+++ b/index.html
@@ -207,7 +207,28 @@
 
     <!---------------------- CONTACT SECTION ------------------------>
     <section class="section-contact" id="contact">
-        <h2>Contact me</h2>
+        <div class="contact-container">
+            <h2>Let's get in touch</h2>
+            <form>
+                <div>
+                    <input type="text" name="" required="">
+                    <label>Name</label>
+                </div>
+                <div>
+                    <input type="text" name="" required="">
+                    <label>E-mail</label>
+                </div>
+                <div>
+                    <input type="text" name="" required="">
+                    <label>Subject</label>
+                </div>
+                <div>
+                    <textarea required=""></textarea>
+                    <label>Message</label>
+                </div>
+                <input type="submit" name="" value="Submit">
+            </form>
+        </div>
     </section>
 
     <!--------------------------- FOOTER ---------------------------->
