adding jquery and modifying icons on button press

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </figure>
             </li>
         </ul>
-        <ul class="projects-showcase clearfix">
+        <ul class="projects-showcase clearfix" id="more-projects">
             <li>
                 <figure class="project-photo">
                     <div class="green"></div>
@@ -203,6 +203,9 @@
                 </figure>
             </li>
         </ul>
+        <div class="row">
+            <a class="btn btn-ghost" id="show-more-projects"><i class="fas fa-arrow-down"></i></a>
+        </div>
     </section>
 
     <!---------------------- CONTACT SECTION ------------------------>
@@ -256,15 +259,18 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 <!------- JAVASCRIPTS AT THE END FOR OPTIMIZED LOADING -------->
 
+<!------------------- JQUERY ---------------------->
+<script src="vendors/js/jquery-3.4.1.min.js"></script>
+    
 <!------------------- FONT AWESOME ICONS ---------------------->
 <script src="https://kit.fontawesome.com/5c07e5c24f.js" crossorigin="anonymous"></script>
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
-<script src="/resources/js/js_sticky_header.js"></script>
+<script src="/resources/js/script.js"></script>
+<script src="resources/js/jquery.js"></script>
 
 </html>
