changing projects section and adding some example images

--- a/index.html
+++ b/index.html
@@ -159,51 +159,41 @@
     <!---------------------- PROJECTS SECTION ----------------------->
     <section class="section-projects" id="projects">
         <h2>Projects</h2>
-        <ul class="projects-showcase clearfix">
-            <li>
-                <figure class="project-photo">
-                    <div class="red"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="blue"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="green"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="yellow"></div>
-                </figure>
-            </li>
-        </ul>
-        <ul class="projects-showcase clearfix" id="more-projects">
-            <li>
-                <figure class="project-photo">
-                    <div class="green"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="red"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="yellow"></div>
-                </figure>
-            </li>
-            <li>
-                <figure class="project-photo">
-                    <div class="blue"></div>
-                </figure>
-            </li>
-        </ul>
         <div class="row">
+            <div class="grid grid-pad">
+                <div class="col-1-2">
+                    <div class="red"></div>
+                </div>
+                <div class="col-1-2">
+                    <div class="blue"></div>
+                </div>
+            </div>
+            <div class="grid grid-pad">
+                <div class="col-1-2">
+                    <div class="blue"></div>
+                </div>
+                <div class="col-1-2">
+                    <div class="red"></div>
+                </div>
+            </div>
+            <div id="more-projects">
+                <div class="grid grid-pad">
+                    <div class="col-1-2">
+                        <div class="red"></div>
+                    </div>
+                    <div class="col-1-2">
+                        <div class="blue"></div>
+                    </div>
+                </div>
+                <div class="grid grid-pad">
+                    <div class="col-1-2">
+                        <div class="blue"></div>
+                    </div>
+                    <div class="col-1-2">
+                        <div class="red"></div>
+                    </div>
+                </div>
+            </div>
             <a class="btn btn-ghost" id="show-more-projects"><i class="fas fa-arrow-down"></i></a>
         </div>
     </section>
@@ -265,12 +255,10 @@
 
 <!------------------- JQUERY ---------------------->
 <script src="vendors/js/jquery-3.4.1.min.js"></script>
-    
+
 <!------------------- FONT AWESOME ICONS ---------------------->
 <script src="https://kit.fontawesome.com/5c07e5c24f.js" crossorigin="anonymous"></script>
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
 <script src="resources/js/jquery.js"></script>
-<script src="/resources/js/script.js"></script>
-
-</html>
+<script src="/resources/js/script.js"></script></html>
