Modifying header, changing images and colors

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <body>
     <!-------------------------- HEADER ----------------------->
     <header id="home">
+        <div class="bg"></div>
         <div class="row" id="navbar">
             <a href="#home">
                 <img src="resources/images/logo/cn_logo_white.png" alt="cn_logo_white.png" class="logo">
@@ -54,7 +55,6 @@
                 </div>
             </div>
         </div>
-
     </header>
     <div class="showcase">
         <div class="container showcase-inner">
