adding signatures and created about section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- CSS FILES -->
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 
     <!-- VENDOR CSS FILES -->
     <link rel="stylesheet" type="text/css" href="vendors/css/simplegrid.css" />
@@ -69,10 +70,18 @@
         <h2>About me</h2>
         <div class="grid grid-pad">
             <div class="col-7-12">
-                <div class="box"></div>
+                <div class="box">
+                    <h3>Software<br>
+                        <span>Developer</span></h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar orci ut luctus egestas. Etiam diam magna, congue vitae velit eu, dignissim fermentum leo. Mauris hendrerit ligula nibh, nec efficitur purus maximus nec. Sed magna tellus, luctus quis fermentum a, sodales vitae mi. Sed sed elit aliquet, viverra risus eget, consequat turpis. Nullam tempus, massa sed mollis pellentesque, arcu urna lacinia tortor, mollis pulvinar ligula lectus sed mi.</p>
+                    <img class="signature" src="resources/images/cn-signature-bold.jpg" alt="cn-signature-bold.png">
+                </div>
             </div>
             <div class="col-5-12">
-                <div class="box"></div>
+                <div class="box">
+                    <img class="profile-image" src="resources/images/placeholder.jpg" alt="profile-image.jpg">
+                </div>
             </div>
         </div>
     </section>
@@ -145,6 +154,9 @@
     <!---------------------- TIMELINE SECTION ----------------------->
     <section class="section-timeline" id="resume">
         <h2>Experiences</h2>
+        <div class="row">
+
+        </div>
     </section>
 
     <!----------------------- RESUME SECTION ------------------------>
@@ -200,27 +212,29 @@
 
     <!---------------------- CONTACT SECTION ------------------------>
     <section class="section-contact" id="contact">
-        <div class="contact-container">
-            <h2>Let's get in touch</h2>
-            <form>
-                <div>
-                    <input type="text" name="" required="">
-                    <label>Name</label>
-                </div>
-                <div>
-                    <input type="text" name="" required="">
-                    <label>E-mail</label>
-                </div>
-                <div>
-                    <input type="text" name="" required="">
-                    <label>Subject</label>
-                </div>
-                <div>
-                    <textarea required=""></textarea>
-                    <label>Message</label>
-                </div>
-                <input type="submit" name="" value="Submit">
-            </form>
+        <h2>Let's get in touch</h2>
+        <div class="row">
+            <div class="contact-container">
+                <form>
+                    <div>
+                        <input type="text" name="" required="">
+                        <label>Name</label>
+                    </div>
+                    <div>
+                        <input type="text" name="" required="">
+                        <label>E-mail</label>
+                    </div>
+                    <div>
+                        <input type="text" name="" required="">
+                        <label>Subject</label>
+                    </div>
+                    <div>
+                        <textarea required=""></textarea>
+                        <label>Message</label>
+                    </div>
+                    <input type="submit" name="" value="Submit">
+                </form>
+            </div>
         </div>
     </section>
 
@@ -235,11 +249,11 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <ul class="footer-nav-social-links">
-                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fas fa-envelope-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="far fa-envelope"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
