modifying about section and adding new signature

--- a/index.html
+++ b/index.html
@@ -68,19 +68,17 @@
     <!---------------------- ABOUT ME SECTION ----------------------->
     <section class="section-about" id="about">
         <h2>About me</h2>
-        <div class="grid grid-pad">
-            <div class="col-7-12">
-                <div class="box">
+        <div class="row">
+            <div class="flexbox">
+                <div class="about-image-box">
+                    <img class="profile-image" src="resources/images/placeholder.jpg" alt="profile-image.jpg">
+                </div>
+                <div class="about-text-box">
                     <h3>Software<br>
                         <span>Developer</span></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar orci ut luctus egestas. Etiam diam magna, congue vitae velit eu, dignissim fermentum leo. Mauris hendrerit ligula nibh, nec efficitur purus maximus nec. Sed magna tellus, luctus quis fermentum a, sodales vitae mi. Sed sed elit aliquet, viverra risus eget, consequat turpis. Nullam tempus, massa sed mollis pellentesque, arcu urna lacinia tortor, mollis pulvinar ligula lectus sed mi.</p>
-                    <img class="signature" src="resources/images/cn-signature-bold.jpg" alt="cn-signature-bold.png">
-                </div>
-            </div>
-            <div class="col-5-12">
-                <div class="box">
-                    <img class="profile-image" src="resources/images/placeholder.jpg" alt="profile-image.jpg">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar orci ut luctus egestas. Etiam diam magna, congue vitae velit eu, dignissim fermentum leo. Mauris hendrerit ligula nibh, nec efficitur purus maximus nec. Sed magna tellus, luctus quis fermentum a, sodales vitae mi. Sed sed elit aliquet, viverra risus eget, consequat turpis. Nullam tempus, massa sed mollis pellentesque, arcu urna lacinia tortor, mollis pulvinar ligula lectus sed mi.</p>
+                    <img class="signature" src="resources/images/cn-signature-new.png" alt="cn-signature-new.png">
                 </div>
             </div>
         </div>
