--- a/index.html
+++ b/index.html
@@ -87,59 +87,45 @@
     <!----------------------- SKILLS SECTION ------------------------>
     <section class="section-skills">
         <h2>Skills</h2>
-        <div class="grid grid-pad">
-            <div class="col-3-12">
+        <div class="row">
+            <div class="flexbox">
                 <div class="box">
                     <i class="fas fa-gamepad"></i>
                     <h3>Game Development</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fab fa-java"></i>
                     <h3>Java / C#</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fab fa-html5"></i>
                     <h3>HTML5</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fab fa-css3-alt"></i>
                     <h3>CSS3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
             </div>
-        </div>
-        <div class="grid grid-pad">
-            <div class="col-3-12">
+            <div class="flexbox">
                 <div class="box">
                     <i class="fas fa-cogs"></i>
                     <h3>Machine Learning</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fas fa-robot"></i>
                     <h3>Artificial Intelligence</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fas fa-shield-alt"></i>
                     <h3>IT-Security</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
-            </div>
-            <div class="col-3-12">
                 <div class="box">
                     <i class="fab fa-python"></i>
                     <h3>Python</h3>
