--- a/index.html
+++ b/index.html
@@ -139,7 +139,56 @@
     <section class="section-timeline" id="resume">
         <h2>Experiences</h2>
         <div class="row">
-
+            <div class="timeline">
+                <ul>
+                    <li>
+                        <div class="timeline-content">
+                            <h3>What is lorem Ipsum?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. Donec felis diam, semper nec dignissim ultricies, lobortis eget eros. </p>
+                        </div>
+                        <div class="timeline-time">
+                            <h4>January 2018</h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-content">
+                            <h3>What is lorem Ipsum?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
+                        </div>
+                        <div class="timeline-time">
+                            <h4>January 2018</h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-content">
+                            <h3>What is lorem Ipsum?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. Donec felis diam, semper nec dignissim ultricies, lobortis eget eros. </p>
+                        </div>
+                        <div class="timeline-time">
+                            <h4>January 2018</h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-content">
+                            <h3>What is lorem Ipsum?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
+                        </div>
+                        <div class="timeline-time">
+                            <h4>January 2018</h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-content">
+                            <h3>What is lorem Ipsum?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at malesuada mi. Pellentesque ultricies felis vel ligula pellentesque porttitor ac in sem. </p>
+                        </div>
+                        <div class="timeline-time">
+                            <h4>January 2018</h4>
+                        </div>
+                    </li>
+                    <div style="clear:both;"></div>
+                </ul>
+            </div>
         </div>
     </section>
 
