--- a/index.html
+++ b/index.html
@@ -205,36 +205,36 @@
     <section class="section-projects" id="projects">
         <h2>Projects</h2>
         <div class="row">
-            <div class="grid grid-pad">
-                <div class="col-1-2">
+            <div class="flexbox">
+                <div class="box">
                     <div class="red"></div>
                 </div>
-                <div class="col-1-2">
+                <div class="box">
                     <div class="blue"></div>
                 </div>
             </div>
-            <div class="grid grid-pad">
-                <div class="col-1-2">
+            <div class="flexbox">
+                <div class="box">
                     <div class="blue"></div>
                 </div>
-                <div class="col-1-2">
+                <div class="box">
                     <div class="red"></div>
                 </div>
             </div>
             <div id="more-projects">
-                <div class="grid grid-pad">
-                    <div class="col-1-2">
+                <div class="flexbox">
+                    <div class="box">
                         <div class="red"></div>
                     </div>
-                    <div class="col-1-2">
+                    <div class="box">
                         <div class="blue"></div>
                     </div>
                 </div>
-                <div class="grid grid-pad">
-                    <div class="col-1-2">
+                <div class="flexbox">
+                    <div class="box">
                         <div class="blue"></div>
                     </div>
-                    <div class="col-1-2">
+                    <div class="box">
                         <div class="red"></div>
                     </div>
                 </div>
@@ -288,11 +288,11 @@
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Made with &hearts; in Gothenburg, Sweden.</p>
         </div>
         <div class="copyright">
             <div class="row">
-                <p>Copyright &copy; Christoffer Nielsen 2020</p>
+                <p>Copyright &copy; Christoffer Nielsen 2020. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
