adding project section and making it responsive, only html part left

--- a/index.html
+++ b/index.html
@@ -208,9 +208,122 @@
             <div class="flexbox">
                 <div class="box">
                     <div class="red"></div>
+                    <h3 class="title">Lorem Ipsum</h3>
+                    <div class="overlay"></div>
+                    <a class="btn btn-square" id="modal-1-button">View Project</a>
+
+                    <!-- The Modal -->
+                    <div id="modal-1" class="modal">
+                        <div class="modal-content">
+
+                            <div class="modal-container">
+                                <span class="btn-exit"><i class="fas fa-times"></i></span>
+
+                                <!-- Slideshow container -->
+
+                                <div class="flexbox">
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test">
+                                        </div>
+                                    </div>
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/thumb-1920-902946.png" alt="test">
+                                        </div>
+                                    </div>
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/4k-wallpaper-calm-waters-dark-1252869.jpg" alt="test">
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <!-- Next and previous buttons -->
+                                <a class="btn-prev" id="prevSlide"><i class="fas fa-chevron-left"></i></a>
+                                <a class="btn-next" id="nextSlide"><i class="fas fa-chevron-right"></i></a>
+
+                                <div class="dots-container">
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="box">
                     <div class="blue"></div>
+                    <h3 class="title">Lorem Ipsum</h3>
+                    <div class="overlay"></div>
+                    <a class="btn btn-square" id="modal-2-button">View Project</a>
+
+                    <!-- The Modal -->
+                    <div id="modal-2" class="modal">
+                        <div class="modal-content">
+
+                            <div class="modal-container">
+                                <span class="btn-exit"><i class="fas fa-times"></i></span>
+
+                                <!-- Slideshow container -->
+
+                                <div class="flexbox">
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test">
+                                        </div>
+                                    </div>
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/thumb-1920-902946.png" alt="test">
+                                        </div>
+                                    </div>
+                                    <div class="slide">
+                                        <div class="slide-text-box">
+                                            <h4>Lorem Ipsum</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        </div>
+                                        <div class="slide-image-box fade">
+                                            <img src="resources/images/4k-wallpaper-calm-waters-dark-1252869.jpg" alt="test">
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <!-- Next and previous buttons -->
+                                <a class="btn-prev" id="prevSlide"><i class="fas fa-chevron-left"></i></a>
+                                <a class="btn-next" id="nextSlide"><i class="fas fa-chevron-right"></i></a>
+
+                                <div class="dots-container">
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="flexbox">
@@ -308,4 +421,6 @@
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
 <script src="resources/js/jquery.js"></script>
-<script src="/resources/js/script.js"></script></html>
+<script src="/resources/js/script.js"></script>
+
+</html>
