--- a/index.html
+++ b/index.html
@@ -210,57 +210,34 @@
                     <div class="red"></div>
                     <h3 class="title">Lorem Ipsum</h3>
                     <div class="overlay"></div>
-                    <a class="btn btn-square" id="modal-1-button">View Project</a>
+                    <button class="btn modal-button" href="#modal1">View Project</button>
 
                     <!-- The Modal -->
-                    <div id="modal-1" class="modal">
+                    <div id="modal1" class="modal">
+
+                        <!-- Modal content -->
                         <div class="modal-content">
+                            <span class="close"><i class="fas fa-times"></i></span>
 
-                            <div class="modal-container">
-                                <span class="btn-exit"><i class="fas fa-times"></i></span>
-
-                                <!-- Slideshow container -->
-
+                            <div class="modal-body">
                                 <div class="flexbox">
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test">
-                                        </div>
+                                    <div class="modal-text-box">
+                                        <h4>Modal 1</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                     </div>
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/thumb-1920-902946.png" alt="test">
-                                        </div>
+                                    <div class="modal-image-box">
+                                        <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
                                     </div>
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/4k-wallpaper-calm-waters-dark-1252869.jpg" alt="test">
-                                        </div>
-                                    </div>
-
                                 </div>
+                            </div>
+                            <!-- Next and previous buttons -->
+                            <a class="prev-button"><i class="fas fa-chevron-left"></i></a>
+                            <a class="next-button"><i class="fas fa-chevron-right"></i></a>
 
-                                <!-- Next and previous buttons -->
-                                <a class="btn-prev" id="prevSlide"><i class="fas fa-chevron-left"></i></a>
-                                <a class="btn-next" id="nextSlide"><i class="fas fa-chevron-right"></i></a>
-
-                                <div class="dots-container">
-                                    <span class="dot"></span>
-                                    <span class="dot"></span>
-                                    <span class="dot"></span>
-                                </div>
+                            <div class="dot-container">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
                             </div>
                         </div>
                     </div>
@@ -269,61 +246,37 @@
                     <div class="blue"></div>
                     <h3 class="title">Lorem Ipsum</h3>
                     <div class="overlay"></div>
-                    <a class="btn btn-square" id="modal-2-button">View Project</a>
+                    <button class="btn modal-button" href="#modal2">View Project</button>
 
                     <!-- The Modal -->
-                    <div id="modal-2" class="modal">
+                    <div id="modal2" class="modal">
+
+                        <!-- Modal content -->
                         <div class="modal-content">
+                            <span class="close"><i class="fas fa-times"></i></span>
 
-                            <div class="modal-container">
-                                <span class="btn-exit"><i class="fas fa-times"></i></span>
-
-                                <!-- Slideshow container -->
-
+                            <div class="modal-body">
                                 <div class="flexbox">
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test">
-                                        </div>
+                                    <div class="modal-text-box">
+                                        <h4>Modal 2</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                     </div>
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/thumb-1920-902946.png" alt="test">
-                                        </div>
+                                    <div class="modal-image-box">
+                                        <img src="resources/images/4k-scenic-view-of-mountain-during-evening.jpg" alt="test.jpg">
                                     </div>
-                                    <div class="slide">
-                                        <div class="slide-text-box">
-                                            <h4>Lorem Ipsum</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        </div>
-                                        <div class="slide-image-box fade">
-                                            <img src="resources/images/4k-wallpaper-calm-waters-dark-1252869.jpg" alt="test">
-                                        </div>
-                                    </div>
-
                                 </div>
+                            </div>
+                            <!-- Next and previous buttons -->
+                            <a class="prev-button"><i class="fas fa-chevron-left"></i></a>
+                            <a class="next-button"><i class="fas fa-chevron-right"></i></a>
 
-                                <!-- Next and previous buttons -->
-                                <a class="btn-prev" id="prevSlide"><i class="fas fa-chevron-left"></i></a>
-                                <a class="btn-next" id="nextSlide"><i class="fas fa-chevron-right"></i></a>
-
-                                <div class="dots-container">
-                                    <span class="dot"></span>
-                                    <span class="dot"></span>
-                                    <span class="dot"></span>
-                                </div>
+                            <div class="dot-container">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="flexbox">
@@ -421,6 +374,4 @@
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
 <script src="resources/js/jquery.js"></script>
-<script src="/resources/js/script.js"></script>
-
-</html>
+<script src="/resources/js/script.js"></script></html>
