--- a/index.html
+++ b/index.html
@@ -220,13 +220,37 @@
                             <span class="close"><i class="fas fa-times"></i></span>
 
                             <div class="modal-body">
-                                <div class="flexbox">
-                                    <div class="modal-text-box">
-                                        <h4>Modal 1</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 1-1</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                        </div>
                                     </div>
-                                    <div class="modal-image-box">
-                                        <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                </div>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 1-2</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 1-3</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -256,13 +280,37 @@
                             <span class="close"><i class="fas fa-times"></i></span>
 
                             <div class="modal-body">
-                                <div class="flexbox">
-                                    <div class="modal-text-box">
-                                        <h4>Modal 2</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 2-1</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-scenic-view-of-mountain-during-evening.jpg" alt="test.jpg">
+                                        </div>
                                     </div>
-                                    <div class="modal-image-box">
-                                        <img src="resources/images/4k-scenic-view-of-mountain-during-evening.jpg" alt="test.jpg">
+                                </div>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 2-2</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-scenic-view-of-mountain-during-evening.jpg" alt="test.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mySlides fade">
+                                    <div class="flexbox">
+                                        <div class="modal-text-box">
+                                            <h4>Modal 2-3</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                        <div class="modal-image-box">
+                                            <img src="resources/images/4k-scenic-view-of-mountain-during-evening.jpg" alt="test.jpg">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -374,4 +422,7 @@
 
 <!------------ PERSONAL WRITTEN JAVASCRIPT FILES -------------->
 <script src="resources/js/jquery.js"></script>
-<script src="/resources/js/script.js"></script></html>
+<script src="/resources/js/script.js"></script>
+<script src="resources/js/slideshow.js"></script>
+
+</html>
