fixing colors and transitions in modal

--- a/index.html
+++ b/index.html
@@ -213,13 +213,12 @@
                     <button class="btn modal-button" href="#modal1">View Project</button>
 
                     <!-- The Modal -->
-                    <div id="modal1" class="modal">
+                    <div class="modal" id="modal1">
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <span class="close"><i class="fas fa-times"></i></span>
-
                             <div class="modal-body">
+                                <span class="close"><i class="fas fa-times"></i></span>
                                 <div class="mySlides fade">
                                     <div class="flexbox">
                                         <div class="modal-text-box">
@@ -238,7 +237,7 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                         </div>
                                         <div class="modal-image-box">
-                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                            <img src="resources/images/4k-wallpaper-calm-waters-dark-1252869.jpg" alt="test.jpg">
                                         </div>
                                     </div>
                                 </div>
@@ -249,7 +248,7 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                         </div>
                                         <div class="modal-image-box">
-                                            <img src="resources/images/4k-wallpaper-adventure-climb-691668.jpg" alt="test.jpg">
+                                            <img src="resources/images/altitude-clouds-cold-772803.jpg" alt="test.jpg">
                                         </div>
                                     </div>
                                 </div>
@@ -273,13 +272,12 @@
                     <button class="btn modal-button" href="#modal2">View Project</button>
 
                     <!-- The Modal -->
-                    <div id="modal2" class="modal">
+                    <div class="modal" id="modal2">
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <span class="close"><i class="fas fa-times"></i></span>
-
                             <div class="modal-body">
+                                <span class="close"><i class="fas fa-times"></i></span>
                                 <div class="mySlides fade">
                                     <div class="flexbox">
                                         <div class="modal-text-box">
